Moved the row editor into a component. Passed down edit methods from the Document component to the edit tools. Cleaned up some methods to make them easier to reason about. Incomplete pages hidden from view. Now there is just the test editor.

--- a/src/components/ScriptRowForm.css
+++ b/src/components/ScriptRowForm.css
@@ -32,3 +32,11 @@
     margin-top: auto;
     margin-bottom: auto;
 }
+
+.script-row-form:hover .row-edit {
+    opacity: 1;
+}
+
+.script-row-form .row-edit {
+    opacity: 0;
+}
