Enabled About, My Documents. Tested out file browsing tree in the My Documents page. Added a callout to let everyone know it's a prototype.

--- a/src/components/ScriptRowForm.css
+++ b/src/components/ScriptRowForm.css
@@ -16,7 +16,7 @@
 
 .round-background {
     border-radius: 2px;
-    background-color: rgba(167, 182, 194, 0.3);
+    background-color: #F5F8FA;
 }
 
 .x-padding-4px {
