--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,9 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap');
+
+body {
+  font-family: "Work Sans", sans-serif;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.customCallout {
-  max-width: 640px;
-  margin-left: 8px;
-  margin-right: 8px;
+button {
+  font-family: "Work Sans", sans-serif;
 }
