Added a saved/unsaved indicator to the editor.

--- a/src/components/ScriptRowSimple.css
+++ b/src/components/ScriptRowSimple.css
@@ -1,3 +1,7 @@
-.script-row-simple {
-    
+.script-row-simple:hover .row-edit {
+    opacity: 1;
+}
+
+.script-row-simple .row-edit {
+    opacity: 0;
 }
