--- a/src/components/DocumentStatus.css
+++ b/src/components/DocumentStatus.css
@@ -5,7 +5,7 @@
     left: 0px;
     bottom: 0px;
     box-sizing: border-box;
-    background: #F5F8FA;
+    background: #FFFFFF;
     border-top-right-radius: 3px;
     /* border: 1px solid #000000; */
 }
