--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -2,4 +2,7 @@
     background: #FFFFFF;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
+    padding-bottom: 64px;
+    padding-left: 24px;
+    padding-right: 24px;
 }
