--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -2,7 +2,9 @@
     background: #FFFFFF;
     border-bottom-left-radius: 3px;
     border-bottom-right-radius: 3px;
-    padding-bottom: 64px;
-    padding-left: 24px;
-    padding-right: 24px;
+    padding-bottom: 3rem;
+    padding-top: 3rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    margin-top: 2rem;
 }
