--- a/src/components/Container.css
+++ b/src/components/Container.css
@@ -1,7 +1,6 @@
 .container {
     background: #FFFFFF;
-    border-bottom-left-radius: 3px;
-    border-bottom-right-radius: 3px;
+    border-radius: 3px;
     padding-bottom: 3rem;
     padding-top: 3rem;
     padding-left: 1.5rem;
