Added big fat insert button to bottom of documents

--- a/src/components/Document.css
+++ b/src/components/Document.css
@@ -6,3 +6,11 @@
 .hover-outline:hover {
     
 }
+
+.new-row-button span, .new-row-button button {
+    width: 100%;
+}
+
+.new-row-button svg {
+    margin-left: calc(50% - 8px);
+}
